[workspace]
members = ["test_v1"]
resolver = "2"

# From: https://github.com/rp-rs/rp2040-project-template/blob/c910b1ff466c6ca25b6eae4166c7c5d14aba63b1/Cargo.toml
# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
