[package]
name = "glowing_dots"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
winit = "0.30"
env_logger = "0.11"
log = "0.4"
wgpu = { version = "24.0", features = ["glsl"] }
pollster = "0.4"
bytemuck = "1.21"
glam = "0.29"
encase = "0.10"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

# From: https://github.com/rp-rs/rp2040-project-template/blob/c910b1ff466c6ca25b6eae4166c7c5d14aba63b1/Cargo.toml
# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
