[package]
name = "glowing_dots"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
env_logger = "0.11"
log = "0.4"
wgpu = { version = "24.0", features = ["glsl"] }
pollster = "0.4"
bytemuck = "1.21"
glam = "0.29"
encase = "0.10"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
