[package]
name = "test_v1"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
env_logger = "0.11"
log = "0.4"
wgpu = { version = "24.0", features = ["glsl"] }
pollster = "0.4"
bytemuck = "1.21"
cgmath = "0.18"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
